# prodigy-cryst

./: .gitignore  CITATION.cff  Dockerfile  Features_MANYdataset.csv  LICENSE  List_of_features-MANY.csv  README.md  classify.py  config.py  environment.yml  interface_classifier.py  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/workflows/: ci.yml  lint.yml  py36.yml  pypi-publish.yml  unittests.yml
.trunk/: trunk.yaml
examples/: 1ppe.ic_model
lib/: __init__.py  aa_properties.py  freesasa.py  parsers.py  utils.py
prodigy_cryst/: __init__.py  classify.py  config.py  interface_classifier.py
prodigy_cryst/lib/: __init__.py  aa_properties.py  freesasa.py  parsers.py  utils.py
src/prodigy_cryst/: interface_classifier.py
src/prodigy_cryst/modules/: __init__.py
test/1ppe/: test_1ppe.py  test_1ppe_selection.py
test/1ppe/golden/: 1ppe_prediction.txt
test/2uuy/: test_2uuy.py
test/2uuy/golden/: 2uuy_prediction.txt
tests/: __init__.py  test_aa_properties.py  test_freesasa.py  test_interface_classifier.py  test_parsers.py  test_utils.py
