[tool.poetry]
name = "prodigy-cryst"
version = "1.0.0"
description = "Predicts if a protein complex interface is biological or crystallographic."
authors = ["BonvinLab <bonvinlab.support@uu.nl>"]
readme = "README.md"
license = "Apache-2.0"
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3.8",
  "Topic :: Scientific/Engineering :: Chemistry",
  "Topic :: Scientific/Engineering :: Bio-Informatics",
  "Intended Audience :: Science/Research",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.9"
scikit-learn = "0.22"
biopython = "^1.79"
numpy = "~1.20"

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.0"
coverage = "^7.5.0"
pytest-cov = "^5.0.0"
hypothesis = "^6.100.2"

[tool.poetry.scripts]
prodigy_cryst = "prodigy_cryst.interface_classifier:main"

[tool.setuptools]
include-package-data = true
packages = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
